feat: add ActiveURL handler
